Movimiento responsive, changes inventory complete responsive and Almacenes Ingreso Responsive

--- a/src/app/components/inventories/movimiento-inventarios/movimiento-inventarios.component.html
+++ b/src/app/components/inventories/movimiento-inventarios/movimiento-inventarios.component.html
@@ -44,7 +44,7 @@
     </div>
     <br/><br/>
     <div class="table-container">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
             <thead style="color: #636363;">
                 <tr>
                 <tr>
