Changes in Almancenes complete responsive

--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -110,7 +110,7 @@
             </button>
         </div>
         <br><br>
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
             <thead style="color: #636363;">
                 <tr>
                     <th style="width: 10%; ">Producto</th>
