--- a/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
+++ b/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="card-body ">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Nombre</th>
@@ -29,7 +29,8 @@
                         <td>{{almacen.codigo}}</td>
                         <td>{{almacen.pto_emision}}</td>
                         <td>
-                            <a class="btn button" (click)="abrirVista(almacen)" style="border-radius: 5px; 
+                            <span [attr.data-almacen]="almacen | json">
+                            <a class="btn button ver-icon" (click)="abrirVista(almacen)" style="border-radius: 5px; 
                                      background: rgb(49,99,173,0.8); 
                                      font-size: 15px; width:120px; 
                                      height:35px;
@@ -40,6 +41,7 @@
                                     ENTRAR
                                 </span>
                             </a>
+                            </span>
                         </td>
                     </tr>
                 </tbody>
