Changes ver factura, inventarios and deploy

--- a/src/app/components/inventories/inventarios/inventarios.component.html
+++ b/src/app/components/inventories/inventarios/inventarios.component.html
@@ -82,6 +82,9 @@
                         <td>
                            <!-- <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'sm'"  style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen" (click)="editarInventarios(inventario)"></fa-icon> -->
                            <span [attr.data-inventario]="inventario | json">
+                            <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+                            data-placement="bottom" title="Editar Modelo Producto"
+                            (click)=" editarInventarios(inventario) "></fa-icon>
                                 <fa-icon [icon]="faTrashAlt" class="btn btn-danger delete-icon" [size]="'lg'" data-placement="bottom" title="Eliminar Almacen" (click)="deshabilitarInventarios(inventario)"></fa-icon>
                             </span>
                         </td>
