Changes Presentation complete

--- a/src/app/components/products/productos/productos.component.html
+++ b/src/app/components/products/productos/productos.component.html
@@ -5,13 +5,13 @@
             <fa-icon [icon]="faList" [size]="'3x'" style="color: #636363;"></fa-icon>
             <h1 class="mx-5 " style="color: #636363;">Productos</h1>
             <div style="position: absolute;right: 26.5em;" class="mx-3">
-                <button class="btn btn-success" (click)="onMigrarPP()">+ PROVEEDORES </button>
+                <button class="btn btn-success" (click)="onMigrarPP()">+ 2. PROVEEDORES </button>
             </div>
             <div style="position: absolute;right: 15.8em;" class="mx-3">
-                <button class="btn btn-info" (click)="onMigrar()">+ PRODUCTOS </button>
+                <button class="btn btn-info" (click)="onMigrar()">+ 1. PRODUCTOS </button>
             </div>
             <div style="position: absolute;right: 4.5em;" class="mx-3">
-                <button class="btn btn-danger" (click)="onMigrarP()">+ PORTAFOLIOS </button>
+                <button class="btn btn-danger" (click)="onMigrarP()">+ 3. PORTAFOLIOS </button>
             </div>
             <div style="position: absolute;right:0;" class="mx-3">
                 <fa-icon [icon]="faPlus" class="btn btn-success" [size]="'lg'" data-toggle="tooltip"
