--- a/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
+++ b/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
@@ -122,7 +122,7 @@
             </small>
         </div>
         <div class="form-group ">
-            <label for="tamanio" style="margin: 0;">Tamaño</label>
+            <label for="tamanio" style="margin: 0;">Tamaño o Talla</label>
             <input type="text " [(ngModel)]="tamanio" class="form-control " (input)="tamanioInp()" id="tamanio" placeholder="Ingrese el tamaño del Producto."
                 formControlName="tamanio">
             <small
