--- a/src/app/components/shooping/ver-compra/ver-compra.component.html
+++ b/src/app/components/shooping/ver-compra/ver-compra.component.html
@@ -37,8 +37,8 @@
                         <tr>
                             <th style="width: 10%; ">Producto</th>
                             <th style="width: 10%; ">Cantidad</th>
-                            <th style="width: 10%; ">Precio Uni.</th>
-                            <th style="width: 10%; ">Precio</th>
+                            <th style="width: 10%; ">Costo Uni.</th>
+                            <th style="width: 10%; ">Costo</th>
                             <th style="width: 10%; ">Tamaño</th>
                             <th style="width: 10%; ">Uni. Medida</th>
                             <th style="width: 10%; ">Color</th>
