--- a/src/app/components/shooping/nuevo-proveedor/nuevo-proveedor.component.html
+++ b/src/app/components/shooping/nuevo-proveedor/nuevo-proveedor.component.html
@@ -23,7 +23,7 @@
                         maxlength="13"
                     >
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button" >
+                        <button class="btn btn-primary" type="button" (click)="obtenerProveedores()" >
                             <fa-icon [icon]="faSearch" [size]="'lg'" style="color: #ffffff">
                             </fa-icon>
                         </button>
