--- a/src/app/components/providers/proveedores-create/proveedores-create.component.html
+++ b/src/app/components/providers/proveedores-create/proveedores-create.component.html
@@ -6,27 +6,42 @@
                 <h1 class="mx-5 " style="color: #636363;">Agregar Proveedor</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
                     <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip"
-                        data-placement="bottom" title="Regresar a modelos" (click)="visualizarProveedores()">
+                        data-placement="bottom" title="Regresar" (click)="visualizarProveedores()">
                     </fa-icon>
                 </div>
             </div>
         </div>
         <div class="card-body ">
             <form [formGroup]="proveedoresForm" (ngSubmit)="onSubmit()">
-
                 <div class="form-group ">
                     <label for="id_fiscal" style="margin: 0;">RUC</label>
+                    <div class="input-group">
                     <input type="text " class="form-control " id="id_fiscal" placeholder="Ingrese el ID fiscal."
                         formControlName="id_fiscal"
-                        (keypress)="validarNumeros($event)"
-                    
-                        >
+                        (keypress)="keyPressNumbers($event)"
+                        (input)="keyPressValidator13($event)"
+                        maxlength="13"
+                    >
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" (click)="obtenerProveedores()" >
+                            <fa-icon [icon]="faSearch" [size]="'lg'" style="color: #ffffff">
+                            </fa-icon>
+                        </button>
+                    </div>
+            </div>
+
                     <small
-                        *ngIf="proveedoresForm.controls['id_fiscal'].invalid && (proveedoresForm.controls['id_fiscal'].dirty || proveedoresForm.controls['id_fiscal'].touched)">
-                        <small *ngIf="proveedoresForm.controls['id_fiscal'].errors?.['required']" style="color: red;">
-                            Debe ingresar el ID Fiscal.
-                        </small>.
+                    *ngIf="proveedoresForm.controls['id_fiscal'].invalid && (proveedoresForm.controls['id_fiscal'].dirty || proveedoresForm.controls['id_fiscal'].touched)">
+                    <small *ngIf="proveedoresForm.controls['id_fiscal'].errors?.['required'] || proveedoresForm.controls['id_fiscal'].errors?.['email']" style="color: red;">
+                        Debe ingresar un RUC valido
                     </small>
+                </small>
+                    <small *ngIf="errorAutorizacion">
+                        <small  *ngIf="errorAutorizacion" style="color: red;">
+                            El RUC debe tener 13 dígitos.
+                        </small >
+                     
+                    </small >
                 </div>
                 <div class="form-group ">
                     <label for="nombre" style="margin: 0;">Nombre</label>
@@ -39,26 +54,43 @@
                         </small>
                     </small>
                 </div>
-         
+          
                 <div class="form-group ">
                     <label for="correo" style="margin: 0;">Correo</label>
                     <input type="text " class="form-control " id="correo" placeholder="Ingrese el correo del proveedor."
                         formControlName="correo">
                     <small
                         *ngIf="proveedoresForm.controls['correo'].invalid && (proveedoresForm.controls['correo'].dirty || proveedoresForm.controls['correo'].touched)">
-                        <small *ngIf="proveedoresForm.controls['correo'].errors?.['required']" style="color: red;">
-                            Debe ingresar el correo del proveedor.
+                        <small *ngIf="proveedoresForm.controls['correo'].errors?.['required'] || proveedoresForm.controls['correo'].errors?.['email']" style="color: red;">
+                            Debe ingresar un correo valido
                         </small>
                     </small>
                 </div>
                 <div class="form-group ">
                     <label for="telefono" style="margin: 0;">Telefono</label>
                     <input type="text " class="form-control " id="telefono" placeholder="Ingrese el telefono del proveedor."
-                        formControlName="telefono">
+                        formControlName="telefono"
+                        maxlength="10" 
+                        (keypress)="keyPressNumbers($event)"
+                        >
                     <small
                         *ngIf="proveedoresForm.controls['telefono'].invalid && (proveedoresForm.controls['telefono'].dirty || proveedoresForm.controls['telefono'].touched)">
                         <small *ngIf="proveedoresForm.controls['telefono'].errors?.['required']" style="color: red;">
                             Debe ingresar el telefono del proveedor.
+                        </small>
+                    </small>
+                </div>
+                <div class="form-group">
+                    <label for="provincia">Provincia</label>
+                    <select class="form-control" (change)="onSelect($event)" formControlName="provincia">
+                        <option [value]=" 0 " selected>Seleccione una provincia</option>
+                        <option *ngFor="let provincia of lstProvincias" [value]= "provincia.provincia">
+                            {{provincia.provincia}}
+                        </option>
+                    </select>
+                    <small *ngIf="selectProvincias2">
+                        <small *ngIf="selectProvincias2" style="color: red; ">
+                            Debe seleccionar una provincia.
                         </small>
                     </small>
                 </div>
