Cambios  carrito screen

--- a/src/app/components/sales/ver-carrito/ver-carrito.component.html
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.html
@@ -41,7 +41,7 @@
               
             </td>
             <td>{{ inventario.pvp2 }}</td>
-            <td>{{ parseInt(inventario.stock!) | number: '.0-0' }}</td>
+            <td>{{ parseInt(inventario.stock_auxiliar!) | number: '.0-0' }}</td>
             <td>{{ inventario.categoria }}</td>
 
             <td>{{ inventario.linea }}</td>
